fix: delete app id

--- a/project.config.json
+++ b/project.config.json
@@ -52,6 +52,6 @@
   },
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
-  "appid": "wx20bfcb076bc360f3",
+  "appid": "",
   "condition": {}
 }
